Bug#35939 - Drift in Falcon row count reported by SHOW TABLE STATUS The problem is that during recalculation of cardinality during commit. If a record was inserted and deleted in the same transaction, it was counted as new and cardinality would be incremented.

This patch addresses this issue. Now table cardinality does not 
change when such a record is encountered.